--- a/Program/BlessYou/BlessYou/BlessYou.csproj
+++ b/Program/BlessYou/BlessYou/BlessYou.csproj
@@ -46,8 +46,13 @@
     <Compile Include="Case.cs" />
     <Compile Include="CBRSystem.cs" />
     <Compile Include="BlessYouMain.cs" />
+    <Compile Include="FeatureClass.cs" />
     <Compile Include="FeatureExtractor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WaveFileClass.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
