--- a/Program/BlessYou/BlessYou/BlessYou.csproj
+++ b/Program/BlessYou/BlessYou/BlessYou.csproj
@@ -43,12 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Case.cs" />
+    <Compile Include="CalculateSimilarityClass.cs" />
+    <Compile Include="CaseClass.cs" />
+    <Compile Include="CaseStatusEnum.cs" />
     <Compile Include="CBRSystem.cs" />
     <Compile Include="BlessYouMain.cs" />
-    <Compile Include="FeatureClass.cs" />
+    <Compile Include="CalculateFeatureClass.cs" />
     <Compile Include="FeatureExtractor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RetrievedCaseClass.cs" />
     <Compile Include="WaveFileClass.cs" />
   </ItemGroup>
   <ItemGroup>
