--- a/Program/Wav reader/Detector/Detector.csproj
+++ b/Program/Wav reader/Detector/Detector.csproj
@@ -56,7 +56,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WavReader.cs" />
+    <Compile Include="WavFile.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
