--- a/Program/BlessYou/BlessYou/BlessYou.csproj
+++ b/Program/BlessYou/BlessYou/BlessYou.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CalculateSimilarityStatClass.cs" />
     <Compile Include="CaseClass.cs" />
     <Compile Include="ConfigurationStatClass.cs" />
+    <Compile Include="PassingZero.cs" />
     <Compile Include="EnumCaseStatus.cs" />
     <Compile Include="CaseLibraryClass.cs" />
     <Compile Include="CBRSystemClass.cs" />
