--- a/Program/BlessYou/BlessYou/BlessYou.csproj
+++ b/Program/BlessYou/BlessYou/BlessYou.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="CalculateSimilarityStatClass.cs" />
     <Compile Include="CaseClass.cs" />
+    <Compile Include="FeatureFFTClass.cs" />
     <Compile Include="ConfigurationStatClass.cs" />
     <Compile Include="FeaturePassingZeroClass.cs" />
     <Compile Include="EnumCaseStatus.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="FeaturePeak2PeakClass.cs" />
     <Compile Include="FeaturePeakClass.cs" />
     <Compile Include="FeatureRMSClass.cs" />
+    <Compile Include="LomontFFTClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetrievedCaseClass.cs" />
     <Compile Include="EnumSneezeMarker.cs" />
