--- a/Program/BlessYou/BlessYou/BlessYou.csproj
+++ b/Program/BlessYou/BlessYou/BlessYou.csproj
@@ -68,6 +68,7 @@
     <Compile Include="FeaturePeak2PeakClass.cs" />
     <Compile Include="FeaturePeakClass.cs" />
     <Compile Include="FeatureRMSClass.cs" />
+    <Compile Include="HelperStaticClass.cs" />
     <Compile Include="LomontFFTClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetrievedCaseClass.cs" />
